@@ -31,7 +31,7 @@ For a given prefix
 the constant names are as follows:
 .sp
 .nf
-Nt:	view type ('v'==1,'l'==2,'a'==3,'h'==4,'c'==5)
+Nt:	view type ('v'==1,'l'==2,'a'==3,'h'==4,'c'==5,'s'==6)
 Npx:	view point x value
 Npy:	view point y value
 Npz:	view point z value
