@@ -442,6 +442,7 @@ printdefaults(void)			/* print default values to stdout */
 			ourview.type==VT_HEM ? "hemispherical" :
 			ourview.type==VT_ANG ? "angular" :
 			ourview.type==VT_CYL ? "cylindrical" :
+			ourview.type==VT_PLS ? "planisphere" :
 			"unknown");
 	printf("-vp %f %f %f\t# view point\n",
 			ourview.vp[0], ourview.vp[1], ourview.vp[2]);
